--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
+/* Minden oldalnál */
+
 main {
-    
 
-
+  margin-bottom: -8px;
 }
 
 header {
 
 text-align: center;
-height: 150px;
+height: 90px;
+padding-top: 50px;
 
 }
 
@@ -18,44 +20,84 @@ height: 150px;
 
 }
 
+
+
 nav {
     grid-area: n;
     background-color: red;
-    border: 2px solid black ;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.navigacio {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-size: 18px;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
 
-  }
-  
 .kezdo {
-    float: left;
+float: left;
+
+}
+
+li {
+  float: right;
+  
+}
+
+li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 16px 45px;
+  text-decoration: none;
 }
 
 
-  li {
-    float: right;
-    display: inline;
-  }
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: brown;
+}
+
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: red;
+  width: 137px;
   
-  li a {
-    display: block;
-    background-color: red;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    color:white;
-   
-  }
 
-  li a:hover {
+}
 
-    background-color: brown;
-    color: antiquewhite;
-  }
+.dropdown-content a {
+  color: white;
+  padding: 14px 14px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+
+}
+
+.elvalaszto {
+  border-right: 2px solid black;
+}
+
+.dropdown-content a:hover {background-color: brown;}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+}
+
+.hobbiLogo {
+
+width: 40px;
+
+}
+
 
 
 
@@ -63,10 +105,265 @@ ul {
   .also {
     width: 80%;
     margin: auto;
-    border: 1px solid beige;
+    padding-bottom: 40px;
+    
 }
 
 footer {
 
     text-align: center;
+    background-color: aqua;
+    padding-bottom: 12px;
+    height: 50px;
+    padding-top: 8px;
+    margin-left: -8px;
+    margin-right: -8px;
+    font-size: 22px;
+    margin-bottom: -10px;
+   
+   
 }
+
+.kicsi {
+  position: fixed;
+    bottom: 0;
+    width: 100%;
+  
+
+}
+
+h4 {
+  margin-top: 14px;
+}
+
+
+
+/* Projektjeim */
+
+
+.projektCim {
+  text-align: center;
+}
+
+.projektek {
+width: 100%;
+}
+
+.csoport {
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr;
+
+}
+
+.projekt {
+width: 70%;
+
+
+border: 1px solid black;
+
+}
+
+.programCim {
+text-align: center;
+}
+
+
+.programLogo {
+margin: auto;
+padding-left: 10%;
+margin-left: 50px;
+padding-top: 10px;
+  width: fit-content;
+
+}
+
+.webProgram {
+  width: 60%;
+}
+
+.pythonProgram {
+width: 60%;
+}
+
+.javaProgram {
+width: 95%;
+margin-left: -33px;
+}
+
+
+
+.gomb {
+margin: auto;
+padding-bottom: 5px;
+padding-top: 20px;
+width: 20%;
+}
+
+
+
+
+/*  elérhetőségi oldal  */
+.eleres {
+width: 50%;
+margin: auto;
+padding: 10px;
+padding-top: 180px;
+}
+
+.informacio {
+  border: 1px solid black;
+  padding-bottom: 10px;
+  padding-top: 15px;
+}
+
+h1 {
+
+  margin-left: 20px;
+}
+
+.fej {
+padding-bottom: 30px;
+}
+
+.logo1  {
+  width: 80%;
+}
+
+.logo2 {
+  width: 70%;
+}
+
+.logo3 {
+
+  width: 60%;
+
+}
+
+
+.eleroLogo{
+margin: auto;
+padding-left: 70%;
+}
+
+
+
+.uzenet {
+list-style-type: none;
+
+
+}
+
+.adat {
+display: grid;
+grid-template-columns: 1fr 3fr  ;
+
+}
+
+.eszkoz {
+  text-align: left;
+}
+
+
+/* Hobbi  */
+
+
+.hobbiSzeret {
+
+width: 70%;
+margin: auto;
+padding: 0px;
+
+
+}
+
+
+aside {
+  margin: auto;
+  padding: 0px;
+  margin-top: -20px;
+
+width: 90%;
+padding-left: 70px;
+display: grid;
+grid-template-columns: 1fr 1fr;
+border: 1px solid black;
+
+}
+
+
+.hobbi {
+
+display: grid;
+grid-template-columns: 1fr 1fr;
+border: 1px solid black;
+margin-top: 20px;
+width: 100%;
+}
+
+.hobbiKiiras {
+
+  padding: 10px;
+  padding-left: 60px;
+}
+
+
+.mediaCim {
+text-align: center;
+}
+
+
+
+
+.video {
+
+width: 400px;
+height: 250px;
+margin: auto;
+padding: 10px;
+margin-top: 20px;
+margin-bottom: 20px;
+
+
+}
+
+
+.lista {
+
+
+
+}
+
+
+.ajanlat {
+margin-left: 240px;
+margin-right: 800px;
+}
+
+table, th, td {
+  margin: auto;
+  padding: 0px;
+ border: 1px solid black;
+}
+thead {
+text-align: center;
+font-weight: bolder;
+font-size: 24px;
+}
+
+tbody {
+font-size: 18px;
+
+
+}
+
+td {
+width: 200px;
+
+
+}
+
+
+
+
+
+
