--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Minden oldalnál */
-
 h1 {
 font-family: Arial, Helvetica, sans-serif;
 color: slategray;
@@ -20,9 +18,6 @@ font-family:'Courier New', Courier, monospace ;
 
 p {
   font-family: 'Times New Roman', Times, serif;
-
-
-
 }
 
 
@@ -70,13 +65,13 @@ nav {
 
 }
 
-li {
+nav li {
   float: right;
 
 
 }
 
-li a {
+nav li a {
   display: inline-block;
   color: white;
   text-align: center;
@@ -87,7 +82,7 @@ li a {
 
 
 
-li a:hover,
+nav li a:hover,
 .dropdown:hover .dropbtn {
   background-color: blanchedalmond;
   color: black;
@@ -190,6 +185,7 @@ h4 {
 .projekt {
   width: 70%;
   padding-bottom: 50px;
+  height: 70%;
 
 
   border: 1px solid black;
@@ -332,7 +328,7 @@ aside {
   padding-left: 70px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   
 
 }
@@ -847,9 +843,7 @@ margin-top: 50px;
 
 
         .hobbi{
-
           width: 70%;
-          padding-right: -60px;
         }
 
 
